--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "latest",
     "gulp-concat-css": "latest",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jshint": "^2.0.4",
     "gulp-rename": "latest",
     "gulp-sass": "latest",
